--- a/My_Theme_Collection/BNHA.theme.css
+++ b/My_Theme_Collection/BNHA.theme.css
@@ -2141,7 +2141,9 @@ body, div, span, textarea, ::-webkit-input-placeholder {
     color: white;
 }
 
-
+.bg-h5JY_x {
+    background-color: transparent;
+  }
 
 
 
