--- a/My_Theme_Collection/Kemono_Friends.theme.css
+++ b/My_Theme_Collection/Kemono_Friends.theme.css
@@ -2143,6 +2143,10 @@ body, div, span, textarea, ::-webkit-input-placeholder {
 .welcomeMessage-3_Mcht p {
     color: white;
 }
+
+.bg-h5JY_x {
+    background-color: transparent;
+  }
   
   /* ---- */
 
