--- a/My_Theme_Collection/No_Game_No_Life.theme.css
+++ b/My_Theme_Collection/No_Game_No_Life.theme.css
@@ -2284,7 +2284,9 @@
 /* Private Calls */
 
 
-
+.bg-h5JY_x {
+    background-color: transparent;
+  }
 
 
 .color-primary-0 { background-color: #582060 rgb(88, 32, 96) }	/* Main Primary Color */
