--- a/My_Theme_Collection/TeamRam.theme.css
+++ b/My_Theme_Collection/TeamRam.theme.css
@@ -2158,6 +2158,11 @@
     color: rgb(222, 222, 222);
 }
 
+.bg-h5JY_x {
+    background-color: transparent;
+  }
+
 /* Main Color */
 .color-primary { #f4acc5  rgba(244, 172, 197, 1.0); }
 /* Main Color */ 
+
