--- a/My_Theme_Collection/TeamRem.theme.css
+++ b/My_Theme_Collection/TeamRem.theme.css
@@ -2148,6 +2148,9 @@
 }
 /* -- */
 
+.bg-h5JY_x {
+    background-color: transparent;
+  }
 
 /* Main Color */
 .color-primary { #8da0e0  rgba(141, 160, 224, 1.0); }
