--- a/My_Theme_Collection/Winter_Returns.theme.css
+++ b/My_Theme_Collection/Winter_Returns.theme.css
@@ -2153,7 +2153,9 @@
     border: 1px solid rgba(255, 255, 255, 0.41);
 }
 /* -- */
-
+.bg-h5JY_x {
+    background-color: transparent;
+  }
 
 /* Main Color */
 .color-primary { #6b82ce  rgba(107, 130, 206, 1.0); }
