--- a/My_Theme_Collection/BNHA.theme.css
+++ b/My_Theme_Collection/BNHA.theme.css
@@ -614,13 +614,17 @@ body, div, span, textarea, ::-webkit-input-placeholder {
 
 .divider-3FBTu8,
 .dividerRed-MKoLlr .dividerContent-2L12VI:after, 
-.dividerRed-MKoLlr .dividerContent-2L12VI:before,
-.attachButtonDivider-3Glu60 {
+.dividerRed-MKoLlr .dividerContent-2L12VI:before {
     background: transparent;
 }
 
+.attachWrapper-1_D-pj {
+    border: none;
+}
+
 .divider-32i8lo,
-.channelTextArea-rNsIhG {
+.channelTextArea-rNsIhG,
+.form-2fGMdU {
     border: none;
 }
 
@@ -803,6 +807,10 @@ body, div, span, textarea, ::-webkit-input-placeholder {
 .uploadModal-2ifh8j .inner-3nWsbo {
     border: none;
 }
+
+.theme-dark .footer-3mqk7D {
+    box-shadow: none;
+}
   
 .uploadModal-2ifh8j {
     background-image: linear-gradient(45deg, rgba(0, 140, 153, 0.633) 0%, rgba(0, 0, 0, 0.646) 100%), url(https://images3.alphacoders.com/744/744194.png);
@@ -826,6 +834,10 @@ body, div, span, textarea, ::-webkit-input-placeholder {
 }
 
 .theme-dark .inner-zqa7da {
+    background-color: transparent;
+}
+
+.scrollableContainer-38zsVD {
     background-color: rgba(33, 31, 31, 0.804);
 }
 
@@ -1214,10 +1226,18 @@ body, div, span, textarea, ::-webkit-input-placeholder {
 }
 
 .theme-dark .searchResultsWrap-2DKFzt,
-.theme-dark .messagesPopoutWrap-1MQ1bW,
-.theme-dark .messagesPopout-24nkyi {
+.theme-dark .messagesPopoutWrap-1MQ1bW {
     background-color: rgba(28, 28, 30, 0.86);
 }
+
+.theme-dark .messagesPopout-24nkyi {
+    background-color: transparent;
+}
+
+.themedPopout-1TrfdI .header-2Kf7Yu+:after {
+    box-shadow: none;
+}
+
 
 .theme-dark .searchHeader-1l-wpR .tab-2Ixsn0, 
 .theme-dark .searchHeader-1l-wpR .totalResults-gxvzgw,
@@ -1327,7 +1347,7 @@ body, div, span, textarea, ::-webkit-input-placeholder {
  border-radius: 9px;
 }
 
-.activity-E-0FeD,
+.activity-2Gy-9S,
 .membersGroup-v9BXpm,
 .container-2Pjhx-,
 .timestampCozy-2hLAPV {
@@ -1366,6 +1386,12 @@ body, div, span, textarea, ::-webkit-input-placeholder {
     margin-left: calc(var(--avatar-size) + -39px);
 }
 
+.placeholder-P6ptfj, 
+.slateTextArea-1bp44y .hljs-comment, 
+.slateTextArea-1bp44y .hljs-quote {
+    color: white;
+}
+
 .containerCozy-B4noqO>*,
 .isMentionedCozy-3isp7y {
     margin-left: calc(var(--avatar-size) + -39px);
@@ -1382,7 +1408,7 @@ body, div, span, textarea, ::-webkit-input-placeholder {
     top: -3px;
 }
 
-.theme-dark .embedInner-1-fpTo {
+.theme-dark .embedFull-2tM8-- {
     background-color: rgba(0, 0, 0, 0.3);
     border-color: transparent;
 }
@@ -1478,7 +1504,15 @@ body, div, span, textarea, ::-webkit-input-placeholder {
 
 /* Emotes Code */
 
-.bda-dark #bda-qem-favourite-container .scroller::-webkit-scrollbar, .bda-dark #bda-qem-favourite-container .scroller::-webkit-scrollbar-track, .bda-dark #bda-qem-favourite-container .scroller::-webkit-scrollbar-track-piece, .bda-dark #bda-qem-twitch-container .scroller::-webkit-scrollbar, .bda-dark #bda-qem-twitch-container .scroller::-webkit-scrollbar-track, .bda-dark #bda-qem-twitch-container .scroller::-webkit-scrollbar-track-piece, .bda-dark .emojiPicker-3m1S-j .scroller-3vODG7::-webkit-scrollbar, .bda-dark .emojiPicker-3m1S-j .scroller-3vODG7::-webkit-scrollbar-track, .bda-dark .emojiPicker-3m1S-j .scroller-3vODG7::-webkit-scrollbar-track-piece {
+#bda-qem-favourite-container .scroller::-webkit-scrollbar, 
+#bda-qem-favourite-container .scroller::-webkit-scrollbar-track, 
+#bda-qem-favourite-container .scroller::-webkit-scrollbar-track-piece, 
+#bda-qem-twitch-container .scroller::-webkit-scrollbar, 
+#bda-qem-twitch-container .scroller::-webkit-scrollbar-track, 
+#bda-qem-twitch-container .scroller::-webkit-scrollbar-track-piece, 
+.emojiPicker-3m1S-j .scroller-3vODG7::-webkit-scrollbar, 
+.emojiPicker-3m1S-j .scroller-3vODG7::-webkit-scrollbar-track, 
+.emojiPicker-3m1S-j .scroller-3vODG7::-webkit-scrollbar-track-piece {
     background-color: transparent!important;
     border-color: transparent!important;
 }
@@ -1492,55 +1526,72 @@ body, div, span, textarea, ::-webkit-input-placeholder {
     background-color: #008c99;
 }
 
-.bda-dark #bda-qem-favourite-container, 
-.bda-dark #bda-qem-twitch-container,
-.bda-dark .emojiPicker-3m1S-j {
+#bda-qem-favourite-container, 
+#bda-qem-twitch-container,
+.emojiPicker-3m1S-j {
     background: linear-gradient(45deg, #008c99 0%, #212121 67%);
 }
 
-.bda-dark #bda-qem {
+.infoBar-U6oBFk {
+    background: none;
+}
+
+#bda-qem {
     border-bottom: none!important;
     background: none;
 }
 
-.bda-dark #bda-qem button {
+#bda-qem button {
     background: #0e0e0e;
     border-left: none;
     box-shadow: none;
 }
   
-.bda-dark #bda-qem button:hover {
+#bda-qem button:hover {
     background-color: #181818;
 }
 
-.bda-dark #bda-qem button.active {
+#bda-qem button.active {
     background-color: #008c99;
 }
 
-.bda-dark .emojiPicker-3m1S-j .dimmer-3iH-5D.visible-3k45bQ {
-    background-color: rgba(0, 0, 0, 0.65);
+.emojiPicker-3m1S-j .categories-1feg4n {
+    background: none;
 }
+
+.slateTextArea-1bp44y {
+    caret-color: white;
+    position: absolute;
+    left: -6px;
+    right: 10px;
+    top: 14px;
+}
+
 
 .emojiPicker-3m1S-j .header-1nkwgG {
     border: none;
+    box-shadow: none;
 }
 
-.bda-dark .emojiPicker-3m1S-j .header-1nkwgG .searchBar-2pWH0_,
-.emojiPicker-3m1S-j .stickyHeader-1SS0JU,
-.bda-dark .emojiPicker-3m1S-j .category-2U57w6 {
+.emojiPicker-3m1S-j .header-1nkwgG .searchBar-2pWH0_
+.emojiPicker-3m1S-j .category-2U57w6 {
     background-color: transparent;
+}
+
+.emojiPicker-3m1S-j .stickyHeader-1SS0JU {
+    display: none;
 }
 
 .icon-3cZ1F_ {
     color: white;
 }
 
-.bda-dark .emojiPicker-3m1S-j .diversitySelector-tmmMv0 .popout-2nUePc {
+.emojiPicker-3m1S-j .diversitySelector-tmmMv0 .popout-2nUePc {
     background: rgba(0, 0, 0, 0.42);
     border-color: transparent;
 }
 
-.bda-dark .emojiPicker-3m1S-j .category-2U57w6 {
+.emojiPicker-3m1S-j .category-2U57w6 {
     color: white;
 }
 
