--- a/My_Theme_Collection/BubblesReturns.theme.css
+++ b/My_Theme_Collection/BubblesReturns.theme.css
@@ -1064,7 +1064,8 @@
     background-color: rgba(65, 95, 132, 0.32);
 }
 
-.channelTextArea-rNsIhG {
+.channelTextArea-rNsIhG,
+.form-2fGMdU {
 	border-top: none;
 }
 
@@ -1119,8 +1120,8 @@
 	margin-bottom: 7px;
 }
 
-.attachButtonDivider-3Glu60 {
-	background-color: transparent;
+.attachWrapper-1_D-pj {
+	border: none;
 }
 
 .textArea-2Spzkt {
@@ -1133,8 +1134,12 @@
 	border-radius: 30px;
 }
 
-.inner-zqa7da {
-	background: linear-gradient(5deg, transparent 52%, rgba(204, 227, 246, 0.8) 100%);
+.theme-dark .inner-zqa7da {
+	background-color: transparent;
+}
+
+.scrollableContainer-38zsVD {
+	 background: linear-gradient(5deg, transparent 52%, rgba(204, 227, 246, 0.8) 100%);
     border: 2px solid rgba(204, 227, 246, 0.60);
     box-shadow: inset 0 0 6px 1px rgba(204, 227, 246, 0.40);
     background-color: rgba(65, 95, 132, 0.256);
@@ -1175,8 +1180,8 @@
 }
 
 /* Emotes */
-.bda-dark #bda-qem-twitch-container .scroller::-webkit-scrollbar-thumb, 
-.bda-dark #bda-qem-favourite-container .scroller::-webkit-scrollbar-thumb, 
+#bda-qem-twitch-container .scroller::-webkit-scrollbar-thumb, 
+#bda-qem-favourite-container .scroller::-webkit-scrollbar-thumb, 
 .bda-dark .emojiPicker-3g68GS .scroller-3vODG7::-webkit-scrollbar-thumb,
 .scrollerThemed-2oenus.themeLight-1_DWyY .scroller-2FKFPG::-webkit-scrollbar-thumb, 
 .theme-dark .scrollerThemed-2oenus.themeLight-1_DWyY .scroller-2FKFPG::-webkit-scrollbar-thumb {
@@ -1184,27 +1189,31 @@
 	background-color: rgba(255,255,255,.4)!important;
 }
 
-.bda-dark #bda-qem-favourite-container .scroller::-webkit-scrollbar, 
-.bda-dark #bda-qem-favourite-container .scroller::-webkit-scrollbar-track, 
-.bda-dark #bda-qem-favourite-container .scroller::-webkit-scrollbar-track-piece, 
-.bda-dark #bda-qem-twitch-container .scroller::-webkit-scrollbar, 
-.bda-dark #bda-qem-twitch-container .scroller::-webkit-scrollbar-track, 
-.bda-dark #bda-qem-twitch-container .scroller::-webkit-scrollbar-track-piece, 
-.bda-dark .emojiPicker-3m1S-j .scroller-3vODG7::-webkit-scrollbar, 
-.bda-dark .emojiPicker-3m1S-j .scroller-3vODG7::-webkit-scrollbar-track, 
-.bda-dark .emojiPicker-3m1S-j .scroller-3vODG7::-webkit-scrollbar-track-piece {
+#bda-qem-favourite-container .scroller::-webkit-scrollbar, 
+#bda-qem-favourite-container .scroller::-webkit-scrollbar-track, 
+#bda-qem-favourite-container .scroller::-webkit-scrollbar-track-piece, 
+#bda-qem-twitch-container .scroller::-webkit-scrollbar, 
+#bda-qem-twitch-container .scroller::-webkit-scrollbar-track, 
+#bda-qem-twitch-container .scroller::-webkit-scrollbar-track-piece, 
+.emojiPicker-3m1S-j .scroller-3vODG7::-webkit-scrollbar, 
+.emojiPicker-3m1S-j .scroller-3vODG7::-webkit-scrollbar-track, 
+.emojiPicker-3m1S-j .scroller-3vODG7::-webkit-scrollbar-track-piece {
 	background-color: transparent!important;
 	border-color: transparent!important;
 }
 
-.bda-dark #bda-qem {
+.infoBar-U6oBFk {
+	background: none;
+}
+
+#bda-qem {
 	border-bottom: none!important;
 	background: transparent;
 }
 
-.bda-dark .emojiPicker-3m1S-j,
-.bda-dark #bda-qem-favourite-container, 
-.bda-dark #bda-qem-twitch-container {
+.emojiPicker-3m1S-j,
+#bda-qem-favourite-container, 
+#bda-qem-twitch-container {
 	background: linear-gradient(5deg, transparent 62%, rgba(204, 227, 246, 0.626) 100%);
     border: 2px solid rgba(204, 227, 246, 0.468);
     box-shadow: inset 0 0 6px 1px rgba(204, 227, 246, 0.557);
@@ -1212,23 +1221,28 @@
 	border-radius:4px;
 }
 
-.bda-dark #bda-qem button.active {
+.emojiPicker-3m1S-j .categories-1feg4n {
+	background: none;
+}
+
+
+#bda-qem button.active {
 	background-color: rgba(204, 227, 246, 0.82) !important;
 	color: black;
 }
 
-.bda-dark #bda-qem button:hover {
+#bda-qem button:hover {
 	background-color: rgba(204, 227, 246, 0.33);
 }
 
-.bda-dark #bda-qem button,
+#bda-qem button,
 .emote-container:hover {
 	background: linear-gradient(5deg, transparent 62%, rgba(204, 227, 246, 0.626) 100%);
     border: 2px solid rgba(204, 227, 246, 0.468);
     box-shadow: inset 0 0 6px 1px rgba(204, 227, 246, 0.557);
 	background-color: rgba(65, 95, 132, 0.776);
 }
-.bda-dark .emojiPicker-3m1S-j .scroller-3vODG7 .emojiItem-109bjA.selected-39BZ4S {
+.emojiPicker-3m1S-j .scroller-3vODG7 .emojiItem-109bjA.selected-39BZ4S {
 	background-color: rgba(65, 95, 132, 0.776);
 	border: 2px solid rgba(204, 227, 246, 0.468);
     box-shadow: inset 0 0 6px 1px rgba(204, 227, 246, 0.557);
@@ -1246,12 +1260,8 @@
 	border-radius: 0 15px 0 0;
 }
 
-.bda-dark .emojiPicker-3m1S-j .dimmer-3iH-5D.visible-3k45bQ {
-	background-color: rgba(0, 0, 0, 0.55);
-	height: 91%;
-}
 
-.bda-dark .emojiPicker-3m1S-j .diversitySelector-tmmMv0 .popout-2nUePc {
+.emojiPicker-3m1S-j .diversitySelector-tmmMv0 .popout-2nUePc {
 	background: rgba(0, 0, 0, 0.52);
 	border-color: transparent;
 }
@@ -1260,11 +1270,16 @@
 	background-color: rgba(245, 245, 245, 0.16);
 }
 
-.bda-dark .emojiPicker-3m1S-j .header-1nkwgG .searchBar-2pWH0_ {
+.emojiPicker-3m1S-j .header-1nkwgG .searchBar-2pWH0_ {
 	background-color: rgba(0, 0, 0, 0.42);
 }
 
-.bda-dark .emojiPicker-3m1S-j .category-2U57w6 {
+.emojiPicker-3m1S-j .header-1nkwgG {
+	border: none;
+	box-shadow: none;
+}
+
+.emojiPicker-3m1S-j .category-2U57w6 {
 	background-color: rgba(0, 0, 0, 0.62);
 	color: white;
 	text-align: center;
@@ -1288,7 +1303,7 @@
 	color: #fff;
 }
 
-.theme-dark .embedInner-1-fpTo {
+.theme-dark .embedFull-2tM8-- {
 	background: linear-gradient(5deg, transparent 62%, rgba(204, 227, 246, 0.626) 100%);
     border: 2px solid rgba(204, 227, 246, 0.468);
     box-shadow: inset 0 0 6px 1px rgba(204, 227, 246, 0.557);
@@ -1500,14 +1515,18 @@
 }
 
 .theme-dark .messagesPopoutWrap-1MQ1bW,
-.theme-dark .messagesPopout-24nkyi,
 .theme-dark .searchResultsWrap-2DKFzt {
 	background-image: linear-gradient(45deg, rgba(4, 8, 120, 0.66) 0%, rgba(118, 13, 11, 0.54) 100%), url(https://images8.alphacoders.com/782/782017.jpg) !important;
 	border: none;
 }
 
-.theme-dark .footer-1kmXd4 {
+.theme-dark .footer-1kmXd4,
+.theme-dark .messagesPopout-24nkyi {
 	background-color: transparent;
+}
+
+.themedPopout-1TrfdI .header-2Kf7Yu+:after {
+	box-shadow: none;
 }
 
 .tip-2ab612 {
@@ -1781,6 +1800,12 @@
 	text-shadow: 0 0 12px black,0 0 16px black,0 0 16px black;
 }
 
+.placeholder-P6ptfj, 
+.slateTextArea-1bp44y .hljs-comment, 
+.slateTextArea-1bp44y .hljs-quote {
+    color: white;
+}
+
 .theme-dark .isMentioned-N-h9aa {
 	background: linear-gradient(5deg, transparent 62%, rgba(204, 227, 246, 0.633)100%);
     border: 2px solid rgba(204, 227, 246, 0.468);
@@ -1891,6 +1916,10 @@
 	background-color: transparent;
 }
 
+.theme-dark .footer-3mqk7D {
+	box-shadow: none;
+}
+
 .uploadModal-2ifh8j {
 	background: linear-gradient(5deg, transparent 62%, rgba(204, 227, 246, 0.633)100%);
     border: 2px solid rgba(204, 227, 246, 0.468);
@@ -1901,8 +1930,16 @@
 }
 
 .theme-brand .inner-zqa7da {
-	background-color: rgba(65, 95, 132, 0.58);
+	background-color: transparent;
 }
+
+.theme-brand .scrollableContainer-38zsVD {
+	background: linear-gradient(5deg, transparent 52%, rgba(204, 227, 246, 0.8) 100%);
+	 border: 2px solid rgba(204, 227, 246, 0.60);
+	 box-shadow: inset 0 0 6px 1px rgba(204, 227, 246, 0.40);
+	 background-color: rgba(65, 95, 132, 0.256);
+}
+
 
 .uploadModal-2ifh8j .inner-3nWsbo .file-34mY5K .icon-kyxXVr.image-2yrs5j {
 	background-color: rgba(0, 0, 0, 0.6);
@@ -1960,7 +1997,7 @@
     text-shadow: 0 0 14px black,0 0 14px black,0 0 14px black,0 0 14px black,0 0 14px black,0 0 14px black;
 }
 
-.activity-E-0FeD {
+.activity-2Gy-9S {
 	color: white;
 	text-shadow: 0 0 14px black,0 0 14px black,0 0 14px black,0 0 14px black
 }
