--- a/My_Theme_Collection/Sunset_Theme.theme.css
+++ b/My_Theme_Collection/Sunset_Theme.theme.css
@@ -823,7 +823,11 @@
 .headerCozyMeta-rdohGq {
     margin-top: -6px;
 }
-
+.placeholder-P6ptfj, 
+.slateTextArea-1bp44y .hljs-comment, 
+.slateTextArea-1bp44y .hljs-quote {
+    color: white;
+}
 .container-3-pyIM,
 .markup-2BOw-j,
 .headerCozyMeta-rdohGq {
@@ -853,12 +857,13 @@
 }
 
 .dividerEnabled-2TTlcf,
-.channelTextArea-rNsIhG {
+.channelTextArea-rNsIhG,
+.form-2fGMdU {
     border: none;
 }
 
-.attachButtonDivider-3Glu60 {
-    background: none;
+.attachWrapper-1_D-pj {
+	border: none;
 }
 
 .hasMore-3e72_v,
@@ -1002,6 +1007,10 @@
     background-color: transparent;
 }
 
+.themedPopout-1TrfdI .header-2Kf7Yu+:after {
+    box-shadow: none;
+}
+
 .theme-dark .emptyPlaceholder-1zh-Eu .body-bvcIjN,
 .tip-2ab612 {
     color: white;
@@ -1014,21 +1023,21 @@
 }
 
 .scrollerThemed-2oenus.themeDark-2cjlUp .scroller-2FKFPG::-webkit-scrollbar-thumb, .theme-dark .scrollerWrap-2lJEkd .scroller-2FKFPG::-webkit-scrollbar-thumb,
-.bda-dark #bda-qem-twitch-container .scroller::-webkit-scrollbar-thumb, .bda-dark #bda-qem-favourite-container .scroller::-webkit-scrollbar-thumb, .bda-dark .emojiPicker-3g68GS .scroller-3vODG7::-webkit-scrollbar-thumb {
+#bda-qem-twitch-container .scroller::-webkit-scrollbar-thumb, #bda-qem-favourite-container .scroller::-webkit-scrollbar-thumb, .bda-dark .emojiPicker-3g68GS .scroller-3vODG7::-webkit-scrollbar-thumb {
     background-color: #731838 !important;
     border: none !important;
     border-radius: 4px !important;
 }
 
 .theme-dark .scrollerThemed-2oenus.themedWithTrack-q8E3vB .scroller-2FKFPG::-webkit-scrollbar-track-piece,
-.bda-dark #bda-qem-favourite-container .scroller::-webkit-scrollbar, 
-.bda-dark #bda-qem-favourite-container .scroller::-webkit-scrollbar-track, 
-.bda-dark #bda-qem-favourite-container .scroller::-webkit-scrollbar-track-piece, .bda-dark #bda-qem-twitch-container .scroller::-webkit-scrollbar, 
-.bda-dark #bda-qem-twitch-container .scroller::-webkit-scrollbar-track, 
-.bda-dark #bda-qem-twitch-container .scroller::-webkit-scrollbar-track-piece, 
-.bda-dark .emojiPicker-3m1S-j .scroller-3vODG7::-webkit-scrollbar, 
-.bda-dark .emojiPicker-3m1S-j .scroller-3vODG7::-webkit-scrollbar-track, 
-.bda-dark .emojiPicker-3m1S-j .scroller-3vODG7::-webkit-scrollbar-track-piece,
+#bda-qem-favourite-container .scroller::-webkit-scrollbar, 
+#bda-qem-favourite-container .scroller::-webkit-scrollbar-track, 
+#bda-qem-favourite-container .scroller::-webkit-scrollbar-track-piece, #bda-qem-twitch-container .scroller::-webkit-scrollbar, 
+#bda-qem-twitch-container .scroller::-webkit-scrollbar-track, 
+#bda-qem-twitch-container .scroller::-webkit-scrollbar-track-piece, 
+.emojiPicker-3m1S-j .scroller-3vODG7::-webkit-scrollbar, 
+.emojiPicker-3m1S-j .scroller-3vODG7::-webkit-scrollbar-track, 
+.emojiPicker-3m1S-j .scroller-3vODG7::-webkit-scrollbar-track-piece,
 .scrollerThemed-2oenus.themeDark-2cjlUp.scrollerTrack-1ZIpsv>.scroller-2FKFPG::-webkit-scrollbar-track, .scrollerThemed-2oenus.themeDark-2cjlUp.scrollerTrack-1ZIpsv>.scrollerStore-390omS::-webkit-scrollbar-track, .theme-dark .scrollerWrap-2lJEkd.scrollerTrack-1ZIpsv>.scroller-2FKFPG::-webkit-scrollbar-track, .theme-dark .scrollerWrap-2lJEkd.scrollerTrack-1ZIpsv>.scrollerStore-390omS::-webkit-scrollbar-track {
     background: none !important;
     border: none !important;
@@ -1399,28 +1408,37 @@
     background-color: transparent;
 }
 
-.bda-dark #bda-qem {
+#bda-qem {
     border-bottom: none!important;
     background: transparent;
 }
 
-.bda-dark #bda-qem button {
+#bda-qem button {
     background: #4d1627; 
     border-left: none;
     box-shadow: none;
 }
 
-.bda-dark #bda-qem button:hover {
+#bda-qem button:hover {
     background-color: #7f2542;
 }
 
-.bda-dark #bda-qem button.active {
-    background-color: #731838;
+.emojiPicker-3m1S-j .categories-1feg4n {
+    background: none;
 }
 
-.bda-dark .emojiPicker-3m1S-j,
-.bda-dark #bda-qem-favourite-container, 
-.bda-dark #bda-qem-twitch-container {
+
+#bda-qem button.active {
+    background-color: #731838 !important;
+}
+
+.infoBar-U6oBFk {
+    background: none;
+}
+
+.emojiPicker-3m1S-j,
+#bda-qem-favourite-container, 
+#bda-qem-twitch-container {
 	background-color: #4d1627;
 }
 
@@ -1430,17 +1448,15 @@
 	border-radius: 2px;
 }
 
-.bda-dark .emojiPicker-3m1S-j .dimmer-3iH-5D.visible-3k45bQ {
-    background-color: rgba(0, 0, 0, 0.65);
-}
 
-.bda-dark .emojiPicker-3m1S-j .diversitySelector-tmmMv0 .popout-2nUePc {
+
+.emojiPicker-3m1S-j .diversitySelector-tmmMv0 .popout-2nUePc {
     background: #731838;
     border-color: transparent;
 }
 
 .diversitySelector-tmmMv0 .popout-2nUePc .item-16cXuq:hover,
-.bda-dark .emojiPicker-3m1S-j .scroller-3vODG7 .emojiItem-109bjA.selected-39BZ4S,
+.emojiPicker-3m1S-j .scroller-3vODG7 .emojiItem-109bjA.selected-39BZ4S,
 .emote-container:hover {
     background-color: rgba(127, 37, 65, 0.44);
 }
@@ -1449,8 +1465,8 @@
     display: none;
 }
 
-.bda-dark .emojiPicker-3m1S-j .category-2U57w6,
-.bda-dark .emojiPicker-3m1S-j .header-1nkwgG .searchBar-2pWH0_ {
+.emojiPicker-3m1S-j .category-2U57w6,
+.emojiPicker-3m1S-j .header-1nkwgG .searchBar-2pWH0_ {
 	background-color: hsla(0, 0%, 0%, .20);
 }
 
@@ -1461,20 +1477,30 @@
 
 .emojiPicker-3m1S-j .header-1nkwgG {
     border: none;
+    box-shadow: none;
 }
 
 .emojiPicker-3m1S-j .categories-1feg4n .item-16cXuq.selected-39BZ4S {
     border-bottom-color: #731838;
 }
 
+
 .theme-dark .inner-zqa7da {
+    background-color: transparent;
+}
+  
+.scrollableContainer-38zsVD {
     background: linear-gradient(270deg, #731838 0%, transparent 82%);
 }
+
 
 
 /* Upload Stuff */
 .uploadModal-2ifh8j {
     background-color: #4d1627;
+}
+.theme-dark .footer-3mqk7D {
+    box-shadow: none;
 }
 
 .uploadModal-2ifh8j .inner-3nWsbo {
@@ -1548,7 +1574,7 @@
 }
 
 .theme-dark .attachment-33OFj0,
-.theme-dark .embedInner-1-fpTo {
+.theme-dark .embedFull-2tM8-- {
     border-color: transparent;
     background-color: rgba(0, 0, 0, 0.3);
 }
